--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -23,6 +23,7 @@
                     android:elevation="4dp"
                     android:visibility="visible">
 
+
                 <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -55,7 +56,8 @@
                         android:gravity="right"
                         android:text="Niqab Bandana Poni Shiffon Arab"
                         android:textStyle="bold"
-                        android:textSize="20dp"
+                        android:textSize="20sp"
+                        android:fontFamily="@font/berlinsans"
                         android:textColor="@android:color/black"/>
 
             </LinearLayout>
@@ -77,6 +79,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginLeft="16dp"
+                        android:fontFamily="@font/berlinsans"
                         android:layout_marginTop="16dp"
                         android:text="Colour"
                         android:textColor="#404547" />
@@ -188,6 +191,7 @@
                             android:text="S"
                             android:background="@drawable/sizeround1"
                             android:layout_margin="5dp"
+                            android:fontFamily="@font/berlinsans"
                             android:layout_gravity="center"
                             android:gravity="center"
 
@@ -242,7 +246,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Total"
-                        android:textSize="12dp"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/berlinsans"
                         android:textColor="#333333"
 
                 />
@@ -254,11 +259,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="#00000000"
-                        android:textSize="18dp"
-                        android:textColor="#333333"
+                        android:textSize="18sp"
+                        android:textColor="@android:color/black"
                         android:text="$ 858.00"
-                        android:gravity="right"
-
+                        android:gravity="end"
+                        android:fontFamily="@font/berlinsans"
+                        android:textStyle="bold"
                 />
 
 
@@ -275,7 +281,7 @@
 
             >
 
-                <TextView
+                <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -286,9 +292,12 @@
                         android:paddingLeft="90dp"
                         android:paddingRight="90dp"
                         android:paddingTop="12dp"
-                        android:text="Continue tes ini yusri yg push"
+                        android:text="Continue"
                         android:textColor="@android:color/white"
-                        android:textSize="15sp" />
+                        android:textSize="15sp"
+                        android:fontFamily="@font/berlinsans"
+                        android:textAllCaps="false"
+                        />
 
             </LinearLayout>
 
