--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,16 +15,18 @@
         <android.support.v7.widget.SearchView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="16dp"
                 android:id="@+id/search_list_sekolah"
                 app:iconifiedByDefault="false"
+                android:background="@drawable/rect"
                 app:queryHint="Search product of interest"
         />
 
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvMain"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"/>
 
 
         <TextView
@@ -32,6 +34,10 @@
                 android:layout_height="wrap_content"
                 android:text="New Product"
                 android:layout_margin="16dp"
+                android:fontFamily="@font/berlinsans"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"
         />
 
         <android.support.v7.widget.RecyclerView
