--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -18,6 +18,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_gravity="center_vertical"
-            tools:text="Niqab"/>
+            tools:text="Niqab"
+            android:fontFamily="@font/berlinsans"
+    android:textColor="@android:color/black"
+    android:textSize="20sp"/>
 
 </LinearLayout>
