--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LoginActivity">
+        tools:context=".loginActivity.LoginActivity">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -53,6 +53,7 @@
 
         <EditText
                 android:layout_gravity="center"
+                android:id="@+id/edtPassword"
                 android:layout_marginTop="16dp"
                 android:layout_marginLeft="41dp"
                 android:layout_marginRight="41dp"
