--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ProductDetailActivity">
+        tools:context=".detailBarang.ProductDetailActivity">
 
     <ScrollView
             android:layout_width="match_parent"
@@ -28,6 +28,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
+                        android:id="@+id/imgDetail"
                         android:src="@drawable/img_1" />
 
                 <ImageView
@@ -255,7 +256,7 @@
 
                 <TextView
 
-                        android:id="@+id/total2"
+                        android:id="@+id/hargaBarang"
                         android:layout_weight="0.6"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
