--- a/app/src/main/res/layout/activity_detail_category.xml
+++ b/app/src/main/res/layout/activity_detail_category.xml
@@ -6,12 +6,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".category.KhimarActivity">
+        tools:context=".category.DetailCategoryActivity">
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Khimar"
+            android:text="Category"
             android:layout_margin="16dp"
             android:fontFamily="@font/berlinsans"
             android:textSize="20sp"
@@ -20,7 +20,7 @@
     />
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/khimar_product_list"
+            android:id="@+id/rv_category_product_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -28,6 +28,5 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/item_new_product"/>
-
 
 </LinearLayout>
