--- a/app/src/main/res/drawable/rect.xml
+++ b/app/src/main/res/drawable/rect.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/listview_background_shape">
     <stroke android:width="1dp" android:color="@android:color/black" />
     <corners android:radius="30dp" />
-    <solid android:color="#00000000" />
+    <solid android:color="@android:color/transparent" />
 </shape>
