--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -8,200 +8,289 @@
         android:orientation="vertical"
         tools:context=".CheckoutActivity">
 
-    <LinearLayout android:layout_width="match_parent"
+    <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/berlinsans"
-                android:padding="8dp"
-                android:layout_margin="16dp"
-                android:layout_marginBottom="8dp"
-                android:text="Provinsi"
-                android:textSize="18sp"/>
-
-        <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="16dp"
-                android:paddingTop="16dp"
-                android:background="@drawable/custom_spinner_background"
-        >
-
-        </Spinner>
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/berlinsans"
-                android:padding="8dp"
-                android:layout_margin="16dp"
-                android:layout_marginBottom="8dp"
-                android:text="Kota/Kabupaten"
-                android:textSize="18sp"/>
-
-        <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="16dp"
-                android:paddingTop="16dp"
-                android:background="@drawable/custom_spinner_background"
-        >
-
-        </Spinner>
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/berlinsans"
-                android:padding="8dp"
-                android:layout_margin="16dp"
-                android:layout_marginBottom="8dp"
-                android:text="Kecamatan"
-                android:textSize="18sp"/>
-
-        <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="16dp"
-                android:paddingTop="16dp"
-                android:background="@drawable/custom_spinner_background"
-        >
-
-        </Spinner>
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/berlinsans"
-                android:padding="8dp"
-                android:layout_margin="16dp"
-                android:layout_marginBottom="8dp"
-                android:text="Kode Pos"
-                android:textSize="18sp"/>
-
-        <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="16dp"
-                android:paddingTop="16dp"
-                android:background="@drawable/custom_spinner_background"
-        >
-
-        </Spinner>
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/berlinsans"
-                android:padding="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:text="Alamat Lengkap"
-                android:textSize="18sp"/>
-        <EditText
+        <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="16dp"
-                android:paddingTop="8dp"
-        />
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="20dp"
+                app:cardCornerRadius="5dp">
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal">
-
-            <TextView
-                    android:id="@+id/textView3"
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Subtotal Produk"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
+                    android:orientation="vertical">
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/berlinsans"
-                    android:textStyle="bold" />
+                    android:padding="8dp"
+                    android:layout_margin="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="Provinsi"
+                    android:textSize="18sp"/>
+
+            <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="16dp"
+                    android:paddingTop="16dp"
+                    android:background="@drawable/custom_spinner_background"
+            >
+
+            </Spinner>
 
             <TextView
-                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/berlinsans"
+                    android:padding="8dp"
+                    android:layout_margin="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="Kota/Kabupaten"
+                    android:textSize="18sp"/>
+
+            <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="16dp"
+                    android:paddingTop="16dp"
+                    android:background="@drawable/custom_spinner_background"
+            >
+
+            </Spinner>
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/berlinsans"
+                    android:padding="8dp"
+                    android:layout_margin="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="Kecamatan"
+                    android:textSize="18sp"/>
+
+            <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="16dp"
+                    android:paddingTop="16dp"
+                    android:background="@drawable/custom_spinner_background"
+            >
+
+            </Spinner>
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/berlinsans"
+                    android:padding="8dp"
+                    android:layout_margin="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="Kode Pos"
+                    android:textSize="18sp"/>
+
+            <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="16dp"
+                    android:paddingTop="16dp"
+                    android:background="@drawable/custom_spinner_background"
+            >
+
+            </Spinner>
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/berlinsans"
+                    android:padding="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="16dp"
+                    android:text="Alamat Lengkap"
+                    android:textSize="18sp"/>
+            <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="end"
+                    android:layout_marginEnd="20dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:text="Rp. 144.000"
-                    android:fontFamily="@font/berlinsans"/>
+                    android:paddingTop="8dp"
+            />
 
-        </LinearLayout>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
 
-        <LinearLayout
+                <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Subtotal Produk"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:fontFamily="@font/berlinsans"
+                        android:textStyle="bold" />
+
+                <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:text="Rp. 144.000"
+                        android:fontFamily="@font/berlinsans"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Subtotal Produk"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:fontFamily="@font/berlinsans"
+                        android:textStyle="bold" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:text="Rp. 10.000"
+                        android:fontFamily="@font/berlinsans"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Total Pembayaran"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:fontFamily="@font/berlinsans"
+                        android:textStyle="bold" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:text="Rp. 155.000"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/berlinsans"/>
+
+            </LinearLayout>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal">
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="20dp"
+                app:cardCornerRadius="5dp">
 
-            <TextView
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Subtotal Produk"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:fontFamily="@font/berlinsans"
-                    android:textStyle="bold" />
+                    android:orientation="vertical">
 
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:text="Rp. 10.000"
-                    android:fontFamily="@font/berlinsans"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Pembayaran Melalui"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:fontFamily="@font/berlinsans"
+                        android:textStyle="bold" />
 
-        </LinearLayout>
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp">
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal">
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Nomor Rekening BNI"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginEnd="16dp"
+                            android:fontFamily="@font/berlinsans"
+                            android:textColor="@android:color/black" />
 
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Total Pembayaran"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:fontFamily="@font/berlinsans"
-                    android:textStyle="bold" />
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="8810 0856 6211 4409"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginEnd="16dp"
+                            android:textSize="20sp"
+                            android:layout_marginTop="16dp"
+                            android:fontFamily="@font/berlinsans"
+                            android:textColor="#F4A014" />
 
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:text="Rp. 155.000"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/berlinsans"/>
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Atas Nama Alif Ain"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginTop="16dp"
+                            android:fontFamily="@font/berlinsans"
+                            android:textColor="@android:color/black" />
 
-        </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
 
         <Button
+                android:id="@+id/btnBuatPesanan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
